fix cursor-behind-toolbar bug, simplify main.tsx drastically

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
 .gay-toolbar-container {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
     transition: bottom 0.05s linear;
 }
 .gay-toolbar {
